--- a/docs/module/_shop/_shop.scss
+++ b/docs/module/_shop/_shop.scss
@@ -98,8 +98,8 @@
   }
   &__search-input{
     padding: 5px;
-    width: calc(100% - 28px);
-    margin: 0 14px;
+    width: 100%;
+    margin: 0 auto;
   }
   &__inner-btn{
     display: flex;
@@ -108,21 +108,21 @@
     margin-bottom: 30px;
   }
   &__btn{
+    width: 100%;
+    margin: 0 auto 3px;
     border: none;
-    background-color: transparent;
     font-size: 16px;
     line-height: 43px;
     border-radius: 5px;
     color: #243f4d;
     background-color: #edf1f4;
-    width: calc(100% - 28px);
-    margin: 0 14px 3px;
   }
   &__title{
     display: inline-block;
     text-transform: uppercase;
     color: $title;
     font-size: 18px;
+    font-weight: 600;
     line-height: auto;
     margin-bottom: 25px;
     padding-right: 55px;
